ResidenceHolder generified