@@ -16,6 +16,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.StringTokenizer;
 
+import static l2trunk.commons.lang.NumberUtils.toInt;
+
 public final class ManorManagerInstance extends MerchantInstance {
     public ManorManagerInstance(int objectId, NpcTemplate template) {
         super(objectId, template);
@@ -104,22 +106,22 @@ public final class ManorManagerInstance extends MerchantInstance {
                     player.sendPacket(new ExShowSellCropList(player, castleId, castle.getCropProcure(CastleManorManager.PERIOD_CURRENT)));
                     break;
                 case 3: // Current seeds (Manor info)
-                    if (time == 1 && !ResidenceHolder.getResidence(Castle.class, castleId).isNextPeriodApproved())
-                        player.sendPacket(new ExShowSeedInfo(castleId, Collections.emptyList()));
+                    if (time == 1 && !ResidenceHolder.getCastle(castleId).isNextPeriodApproved())
+                        player.sendPacket(new ExShowSeedInfo(castleId, List.of()));
                     else
-                        player.sendPacket(new ExShowSeedInfo(castleId, ResidenceHolder.getResidence(Castle.class, castleId).getSeedProduction(time)));
+                        player.sendPacket(new ExShowSeedInfo(castleId, ResidenceHolder.getCastle(castleId).getSeedProduction(time)));
                     break;
                 case 4: // Current crops (Manor info)
-                    if (time == 1 && !ResidenceHolder.getResidence(Castle.class, castleId).isNextPeriodApproved())
-                        player.sendPacket(new ExShowCropInfo(castleId, Collections.emptyList()));
+                    if (time == 1 && !ResidenceHolder.getCastle(castleId).isNextPeriodApproved())
+                        player.sendPacket(new ExShowCropInfo(castleId, List.of()));
                     else
-                        player.sendPacket(new ExShowCropInfo(castleId, ResidenceHolder.getResidence(Castle.class, castleId).getCropProcure(time)));
+                        player.sendPacket(new ExShowCropInfo(castleId, ResidenceHolder.getCastle(castleId).getCropProcure(time)));
                     break;
                 case 5: // Basic info (Manor info)
                     player.sendPacket(new ExShowManorDefaultInfo());
                     break;
                 case 6: // Buy harvester
-                    showShopWindow(player, Integer.parseInt("3" + getNpcId()), false);
+                    showShopWindow(player, toInt("3" + getNpcId()), false);
                     break;
                 case 9: // Edit sales (Crop sales)
                     player.sendPacket(new ExShowProcureCropDetail(state));
